--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "handlebar": "^1.0.0",
     "lodash": "^4.17.21",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
