--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/arymaulana/node-mail-service#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "deep-email-validator": "^0.1.21",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "handlebar": "^1.0.0",
     "lodash": "^4.17.21",
     "nodemailer": "^6.8.0",
